--- a/requirements.txt
+++ b/requirements.txt
@@ -39,3 +39,9 @@ traitlets==4.3.2
 urllib3==1.22
 wcwidth==0.1.7
 Werkzeug==0.12.2
+# Extra stuff required for debug
+Werkzeug>=0.12.2
+# WSGI Handler
+# ------------------------------------------------
+gevent==1.1.2
+gunicorn==19.6.0
